tests/models/struct/named/u64/fail/lt.rs
use dade::model;
#[model]
struct TestModel {
    #[field(lt = 2.0)]
    value: u64,
}
fn main() {}
